[package]
name = "bloons_randomizer"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", features = ["webp"] }
ron = "0.8.1"
bevy_common_assets = { version = "0.9.0", features = ["ron"] }
bevy-inspector-egui = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
bevy_asset_preload = {git = "https://github.com/Warhorst/bevy_asset_preload.git"}