[package]
name = "bloons_randomizer"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = { version = "0.26.2", features = ["all_loaders"] }
image = { version = "0.24.9", features = ["webp"]}
getrandom = { version = "0.2", features = ["js"] }
include_images = {path = "include_images" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[workspace]
members = [
    "include_images"
]